@@ -25,6 +25,13 @@ tbd Sun Microsystems, Inc.
 	  For more information, please refer to bugzilla 13904.
 
 Severity   : normal
+Bugzilla   : 15443
+Description: wait until IO finished before start new when do lock cancel.
+Details    : VM protocol want old IO finished before start new, in this case
+             need wait until PG_writeback is cleared until check dirty flag and
+             call writepages in lock cancel callback.
+
+Severity   : normal
 Bugzilla   : 12888
 Description: mds_mfd_close() ASSERTION(rc == 0) 
 Details    : In mds_mfd_close(), we need protect inode's writecount change 
